# napari-gtlearning

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari-gtlearning/: _widget.py  napari.yaml  path.py
src/napari-gtlearning/_tests/: test_widget.py  test_writer.py
src/napariPlugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/napariplugin/: napari.yaml
src/napariplugin/_tests/: test_reader.py  test_sample_data.py
